Changed database setup to avoid QCoreApplication error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${FORMS_DIR})
 
 # Set executable icon
-set(APP_ICON_RESOURCE_WINDOWS "${RESOURCES_DIR}/appicon.rc")
+set(APP_ICON_RESOURCE_WINDOWS "${RESOURCES_DIR}/icons/icon.ico")
 
 # Add the executable
 add_executable(EbookAccess WIN32 ${SOURCES} ${APP_ICON_RESOURCE_WINDOWS})
